src/objects/Template_Milestone__c.object
<CustomObject>
    <description>These are used exclusively to create the real milestones attached to each Outcome and Service Participation.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsParentContractLocked__c</fullName>
        <formula>Template_Outcome__r.Contract__r.IsLocked__c</formula>
        <label>IsParentContractLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_commitment__c</fullName>
        <description>Performance commitment / goal is a target # of participants that we promise to our funders that we as an organization will achieve in order to maintain contract compliance.</description>
        <inlineHelpText>Performance commitment / goal is a target # of participants that we promise to our funders that we as an organization will achieve in order to maintain contract compliance.</inlineHelpText>
        <label>Performance commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template_Outcome__c</fullName>
        <label>Template Outcome</label>
        <referenceTo>Template_Outcome__c</referenceTo>
        <relationshipLabel>Template Milestones</relationshipLabel>
        <relationshipName>Template_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Template Milestone</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Template Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>